# oxicrypto

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.ffi-audit  README.md  SECURITY.md  TODO.md  deny.toml
crates/oxicrypto/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-adapter-aws-lc/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-adapter-aws-lc/benches/: aws_lc_aead.rs  aws_lc_hash.rs  aws_lc_sig.rs
crates/oxicrypto-adapter-aws-lc/src/: aead.rs  hash.rs  hkdf.rs  lib.rs  mac.rs  sign.rs
crates/oxicrypto-adapter-aws-lc/tests/: integration.rs  oxistore_encrypt_compat.rs  oxitls_coexist.rs  parity.rs  purity.rs
crates/oxicrypto-adapter-pkcs11/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-adapter-pkcs11/benches/: pkcs11_bench.rs
crates/oxicrypto-adapter-pkcs11/src/: hash.rs  hsm_keygen.rs  keystore.rs  lib.rs  pool.rs  provider.rs  sign.rs  sym.rs  tls.rs
crates/oxicrypto-adapter-pkcs11/tests/: softhsm.rs
crates/oxicrypto-aead/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-aead/src/: aes_gcm_siv.rs  ccm.rs  committing.rs  deoxys.rs  deoxys_bc.rs  gcm_synthetic.rs  keywrap.rs  lib.rs  nonce_seq.rs  nonce_types.rs  ocb3_impl.rs  sealed_box.rs  stream.rs  xchacha20.rs
crates/oxicrypto-aead/tests/: fuzz_aead.rs  kat_aes_ccm.rs  kat_aes_gcm_full.rs  kat_aes_gcm_siv.rs  kat_chacha20poly1305.rs  kat_deoxys.rs  kat_gcm.rs  kat_xchacha20.rs  prop_aead.rs  test_aead_edge_cases.rs  test_hkdf_aead_integration.rs  test_nonce_types.rs  test_synthetic_iv_gcm.rs
crates/oxicrypto-bench/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-bench/benches/: aead.rs  core.rs  factory_overhead.rs  hash.rs  kdf.rs  kex.rs  mac.rs  pq.rs  rand.rs  sig.rs
crates/oxicrypto-bench/scripts/: bench_arch_profile.sh  bench_archive.sh  bench_compare.sh  bench_ratios.py  bench_simd_compare.sh  bench_summary.py
crates/oxicrypto-bench/src/: lib.rs
crates/oxicrypto-bench/tests/: coverage.rs  ct_timing.rs  purity.rs  regression.rs
crates/oxicrypto-cipher/: Cargo.toml  README.md
crates/oxicrypto-cipher/src/: lib.rs
crates/oxicrypto-core/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-core/src/: algo_id.rs  ct.rs  error.rs  lib.rs  secret.rs  tests.rs
crates/oxicrypto-core/src/traits/: aead.rs  hash.rs  kdf.rs  kex.rs  mac.rs  mod.rs  pq.rs  rng.rs  sig.rs
crates/oxicrypto-hash/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-hash/fuzz/: Cargo.toml
crates/oxicrypto-hash/fuzz/fuzz_targets/: fuzz_hash_no_panic.rs  fuzz_streaming_equivalence.rs  fuzz_xof_no_panic.rs
crates/oxicrypto-hash/src/: hash_builder.rs  lib.rs  parallelhash.rs  xof.rs
crates/oxicrypto-hash/tests/: kat_blake2.rs  kat_blake3_official.rs  kat_parallelhash.rs  kat_sha256.rs  kat_sha3.rs  kat_sha384_sha512.rs  kat_wycheproof.rs  kat_xof.rs  large_input.rs  no_alloc.rs  streaming_equivalence.rs
crates/oxicrypto-kdf/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-kdf/benches/: kdf_bench.rs
crates/oxicrypto-kdf/src/: argon2_kdf.rs  balloon.rs  bcrypt_kdf.rs  hkdf_label.rs  kbkdf.rs  lib.rs  pbkdf2_kdf.rs  scrypt_kdf.rs  stretcher.rs
crates/oxicrypto-kdf/tests/: kat_argon2.rs  kat_argon2id.rs  kat_balloon.rs  kat_hkdf.rs  kat_hkdf_extract_expand.rs  kat_pbkdf2.rs  kat_pbkdf2_rfc8018.rs  kat_scrypt.rs  prop_kdf.rs
crates/oxicrypto-kex/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-kex/src/: lib.rs
crates/oxicrypto-kex/src/hpke/: context.rs  ids.rs  kem.rs  key_schedule.rs  labeled.rs  mod.rs  suite.rs
crates/oxicrypto-kex/src/hpke/tests/: mod.rs  rfc9180_vectors.rs  roundtrip.rs
crates/oxicrypto-kex/tests/: kat_ecdh_nist.rs  kat_rfc7748.rs  kat_x25519_wycheproof.rs  prop_kex.rs
crates/oxicrypto-mac/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-mac/src/: hmac_streaming_hash.rs  lib.rs  tests_inline.rs  tls.rs
crates/oxicrypto-mac/tests/: kat_cmac.rs  kat_cmac_nist.rs  kat_hmac.rs  kat_hmac_sha384.rs  kat_hmac_wycheproof.rs  kat_kmac.rs  kat_kmac_nist.rs  kat_poly1305.rs  kat_poly1305_rfc8439.rs  prop_mac.rs
crates/oxicrypto-pq/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-pq/benches/: pq_benchmarks.rs
crates/oxicrypto-pq/src/: hybrid.rs  lib.rs  mldsa.rs  mlkem.rs  slh_dsa.rs  stack_safe.rs
crates/oxicrypto-pq/tests/: chaos.rs  kat_acvp_mldsa.rs  kat_acvp_mlkem768.rs  kat_mldsa.rs  kat_mlkem.rs  kat_nist_mldsa.rs  prop_hybrid.rs  prop_mldsa.rs  prop_mlkem.rs  stack_safe.rs
crates/oxicrypto-rand/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-rand/src/: helpers.rs  lib.rs  oxirng.rs  read.rs  reseeding.rs  thread_rng.rs
crates/oxicrypto-rand/tests/: statistical.rs
crates/oxicrypto-sig/: Cargo.toml  README.md  TODO.md
crates/oxicrypto-sig/src/: ecdsa_p256.rs  ecdsa_p384.rs  ecdsa_p521.rs  ed25519_ext.rs  ed448.rs  ed448_ext.rs  lib.rs  musig2.rs  rsa_sig.rs  schnorr.rs  tls.rs
crates/oxicrypto-sig/src/frost/: aggregate.rs  keygen.rs  mod.rs  round1.rs  round2.rs  tests.rs
crates/oxicrypto-sig/tests/: fuzz_sig.rs  kat_bip340.rs  kat_ecdsa.rs  kat_ecdsa_fips.rs  kat_ecdsa_wycheproof.rs  kat_ed25519.rs  kat_ed448.rs  kat_ed448ph.rs  kat_rsa.rs  kat_rsa_wycheproof.rs  prop_sig.rs  test_ecdsa_batch_verify.rs  test_ed25519_low_order.rs  test_rsa_min_2048.rs
crates/oxicrypto/examples/: encrypt.rs  hash.rs  kex.rs  pq_kem.rs  sign.rs
crates/oxicrypto/src/: lib.rs  tests.rs  version.rs
crates/oxicrypto/src/algo/: aead.rs  hash.rs  kdf.rs  kex.rs  mac.rs  mod.rs  pq.rs  sig.rs
crates/oxicrypto/tests/: features.rs  integration_pipeline.rs  pq_hybrid_encryption.rs
scripts/: ffi-audit.sh
