[workspace]
resolver = "2"
members = [
    "crates/oxicrypto-core",
    "crates/oxicrypto-hash",
    "crates/oxicrypto-aead",
    "crates/oxicrypto-cipher",
    "crates/oxicrypto-mac",
    "crates/oxicrypto-sig",
    "crates/oxicrypto-kex",
    "crates/oxicrypto-kdf",
    "crates/oxicrypto-rand",
    "crates/oxicrypto-pq",
    "crates/oxicrypto",
    "crates/oxicrypto-bench",
    "crates/oxicrypto-adapter-aws-lc",
    "crates/oxicrypto-adapter-pkcs11",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["COOLJAPAN OU (Team Kitasan)"]
license = "Apache-2.0"
repository = "https://github.com/cool-japan/oxicrypto"
description = "OxiCrypto is the COOLJAPAN-blessed Pure Rust cryptographic primitives layer: hashes, MACs, AEADs, signatures, key exchange, KDFs, password hashing, PRNGs, and a post-quantum preview."

[workspace.dependencies]
# Internal crates
oxicrypto                  = { path = "crates/oxicrypto",                  version = "0.1.0" }
oxicrypto-core             = { path = "crates/oxicrypto-core",             version = "0.1.0" }
oxicrypto-hash             = { path = "crates/oxicrypto-hash",             version = "0.1.0" }
oxicrypto-aead             = { path = "crates/oxicrypto-aead",             version = "0.1.0" }
oxicrypto-cipher           = { path = "crates/oxicrypto-cipher",           version = "0.1.0" }
oxicrypto-mac              = { path = "crates/oxicrypto-mac",              version = "0.1.0" }
oxicrypto-sig              = { path = "crates/oxicrypto-sig",              version = "0.1.0" }
oxicrypto-kex              = { path = "crates/oxicrypto-kex",              version = "0.1.0" }
oxicrypto-kdf              = { path = "crates/oxicrypto-kdf",              version = "0.1.0" }
oxicrypto-rand             = { path = "crates/oxicrypto-rand",             version = "0.1.0" }
oxicrypto-pq               = { path = "crates/oxicrypto-pq",               version = "0.1.0" }
oxicrypto-adapter-aws-lc   = { path = "crates/oxicrypto-adapter-aws-lc",   version = "0.1.0" }
oxicrypto-adapter-pkcs11   = { path = "crates/oxicrypto-adapter-pkcs11",   version = "0.1.0" }

# Crypto primitives — new-generation RustCrypto (digest 0.11 chain)
sha2           = { version = "0.11.0",  default-features = false }
sha3           = { version = "0.12.0",  default-features = false }
blake2         = { version = "0.11.0-rc.6", default-features = false }
blake3         = { version = "1.8.5",   default-features = false }
hmac           = { version = "0.13.0",  default-features = false }
hkdf           = { version = "0.13.0",  default-features = false }
digest         = { version = "0.11.3",  default-features = false }

# Crypto primitives — old-generation RustCrypto (aead 0.5 chain)
aes-gcm            = { version = "0.10.3", default-features = false, features = ["aes"] }
chacha20poly1305   = { version = "0.10.1", default-features = false }
aead               = { version = "0.5.2",  default-features = false }

# Raw block / stream primitives for QUIC header protection (aligned with the
# aead 0.5 chain: aes-gcm 0.10 pulls aes 0.8, chacha20poly1305 0.10 pulls chacha20 0.9)
aes                = { version = "0.9.1",  default-features = false }
chacha20           = { version = "0.10.0",  default-features = false }

# Key agreement / signatures (dalek ecosystem)
ed25519-dalek  = { version = "2.2.0",  default-features = false, features = ["rand_core"] }
x25519-dalek   = { version = "2.0.1",  default-features = false, features = ["static_secrets"] }
# curve25519-dalek: direct dep for FROST(Ed25519, SHA-512) group math (RFC 9591).
# Pinned to the SAME major (4.x) that ed25519-dalek 2.2.0 pulls so there is
# exactly ONE curve25519-dalek in the tree (verified via `cargo tree`).
curve25519-dalek = { version = "4.1.3", default-features = false, features = ["alloc", "zeroize", "precomputed-tables"] }

# RNG
rand_chacha    = { version = "0.10.0", default-features = false }
rand_core      = { version = "0.10.1", default-features = false }
getrandom      = { version = "0.4.2",  features = ["std", "sys_rng"] }

# Utilities
subtle         = { version = "2.6.1",  default-features = false }
zeroize        = { version = "1.8.2",  default-features = false, features = ["derive", "alloc"] }

# M2 additions — signature algorithms (digest 0.11 / new-gen chain)
rsa            = { version = "0.10.0-rc.18", default-features = false, features = ["encoding"] }
p256           = { version = "0.14.0-rc.9",  default-features = false, features = ["ecdsa", "alloc"] }
p384           = { version = "0.14.0-rc.9",  default-features = false, features = ["ecdsa", "alloc"] }
p521           = { version = "0.14.0-rc.9",  default-features = false, features = ["ecdsa", "alloc"] }
k256           = { version = "0.14.0-rc.9",  default-features = false, features = ["schnorr", "alloc"] }
ed448-goldilocks = { version = "0.14.0-pre.12", default-features = false, features = ["signing"] }
x448             = { version = "0.14.0-pre.9",  default-features = false }

# M2 additions — password hashing KDFs (digest 0.11 / new-gen chain)
pbkdf2         = { version = "0.13.0",       default-features = false, features = ["sha2", "hmac"] }
argon2         = { version = "0.6.0-rc.8",   default-features = false, features = ["alloc", "password-hash"] }
scrypt         = { version = "0.12.0",       default-features = false, features = ["password-hash"] }
password-hash  = { version = "0.6.1",        default-features = false, features = ["alloc", "phc"] }

# M2 additions — AEAD extensions (aead 0.5 / old-gen chain — aligned with M1)
aes-gcm-siv    = { version = "0.11.1",       default-features = false, features = ["aes"] }

# MAC/AEAD extensions
# poly1305 0.8 is pinned by chacha20poly1305 0.10 (which requires poly1305 ^0.8)
poly1305       = { version = "0.9.0",        default-features = false }
# cmac 0.8 requires cipher 0.5; use aes-cipher05 (aes 0.9) as the cipher backend
cmac           = { version = "0.8.0",        default-features = false }
ccm            = { version = "0.6.0-rc.3",   default-features = false }
ocb3           = { version = "0.1.0",        default-features = false }
# aes-cipher05: aes 0.9.x implements cipher 0.5 traits (required by cmac 0.8).
# Coexists with aes 0.8 (cipher 0.4, used by aes-gcm / chacha20poly1305 chain).
aes-cipher05   = { package = "aes", version = "0.9.1",  default-features = false }
# KMAC / cSHAKE via tiny-keccak — SP 800-185 compliant, feature-gated
tiny-keccak    = { version = "2.0.2",        default-features = false, features = ["kmac"] }

# SHAKE / cSHAKE XOF crates (sha3 0.12 moved them out)
shake          = { version = "0.1.0",        default-features = false, features = ["alloc"] }
cshake         = { version = "0.2.1",        default-features = false, features = ["alloc"] }

# M3 additions — Post-quantum primitives (FIPS 203 / FIPS 204)
ml-kem         = { version = "0.3.2",        default-features = false, features = ["hazmat", "zeroize"] }
ml-dsa         = { version = "0.1.0",        default-features = false, features = ["alloc", "rand_core", "zeroize"] }

# M3 additions — post-quantum stateless signatures + new AEADs
# aes-siv omitted: 0.8.0-rc.3 requires aead 0.6, workspace pins aead 0.5
slh-dsa        = { version = "0.2.0-rc.5",   features = ["alloc"] }
aes-kw         = { version = "0.3.1",        default-features = false }

# Test/decode utilities
hex            = { version = "0.4.3",  default-features = false, features = ["alloc"] }

# M4 additions — SIMD dispatch + criterion benches
cpufeatures    = { version = "0.3.0" }
criterion      = { version = "0.8.2", features = ["html_reports"] }
ring           = { version = "0.17.14" }
aws-lc-rs      = { version = "1.17.0" }
cryptoki       = { version = "0.12.0" }
