[package]
name = "oxicrypto-adapter-aws-lc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OxiCrypto adapter for aws-lc-rs: FIPS-validated AEAD, signatures, and hashes"
keywords = ["cryptography", "aws-lc", "aead", "ed25519", "fips"]
categories = ["cryptography"]

[features]
default = []
aws-lc = ["dep:aws-lc-rs"]

[dependencies]
oxicrypto-core = { workspace = true }
aws-lc-rs      = { workspace = true, optional = true }

[dev-dependencies]
oxicrypto-aead = { path = "../oxicrypto-aead" }
oxicrypto-hash = { path = "../oxicrypto-hash" }
oxicrypto-sig  = { path = "../oxicrypto-sig" }
ed25519-dalek  = { workspace = true }
# Cross-workspace path deps for integration tests (not published; safe in dev-deps)
oxistore-encrypt    = { path = "../../../oxistore/crates/oxistore-encrypt" }
oxistore-core       = { path = "../../../oxistore/crates/oxistore-core" }
oxitls-adapter-aws-lc = { path = "../../../oxitls/crates/oxitls-adapter-aws-lc", features = ["aws-lc"] }
rustls              = { version = "0.23", default-features = false, features = ["std", "tls12"] }
