[package]
name = "oxicrypto-hash"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust hash implementations for OxiCrypto (SHA-2, SHA-3, BLAKE3)"
readme = "README.md"
keywords = ["cryptography", "hash", "sha2", "sha3", "blake3"]
categories = ["cryptography"]

[features]
default = ["alloc"]
## Enable the heap-allocating API surface: the `Hash::hash_to_vec` trait method,
## `blake3_xof`, `parallel_hash*_xof`, the streaming `HashBuilder`, and the
## SHAKE / cSHAKE / TupleHash XOF helpers.  ON by default.
##
## Build with `--no-default-features` for a genuinely allocation-free crate that
## links only `core`.  In that configuration:
## - `hash_to_vec`, `blake3_xof`, `parallel_hash*_xof`, `HashBuilder`, and the
##   XOF helpers are NOT compiled (they require `alloc`).
## - Use the inherent `hash_fixed::<N>()` methods on concrete hash types
##   (e.g. `Sha256::hash_fixed`, `Blake3::hash_fixed`), which write into a
##   fixed-size `[u8; N]` on the stack without any heap allocation.
## - `Hash::hash` and `Hash::hash_to_array::<N>()` from `oxicrypto-core` remain
##   available as alloc-free alternatives to `hash_to_vec`.
alloc = [
    "oxicrypto-core/alloc",
    "sha2/alloc",
    "sha3/alloc",
    "blake2/alloc",
    "digest/alloc",
]
std = ["alloc", "blake3/std", "oxicrypto-core/std"]

[dependencies]
oxicrypto-core = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake2 = { workspace = true }
blake3.workspace = true
digest = { workspace = true }
shake.workspace = true
cshake.workspace = true

[dev-dependencies]
hex.workspace = true
